카테고리 바 만들기 ing

--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/개인/html/header_001.html
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/개인/html/header_001.html
@@ -14,8 +14,81 @@
     <div class="search ps_10">돋보기</div>
     <div class="user ps_10">사용자</div>
   </header>
-  <nav style="margin:10px 0;height:60px; border:2px solid #000; background:red;">
-
+  <nav>
+    <div class="category-bar">
+      <button class="category-button">
+        <img src="../images/677a041d-7264-4c45-bb72-52bff21eb6e8.jpg" alt="airplane icon">
+        <div>호숫가</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
+        <div>저택</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
+        <div>국립공원</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>료칸</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
+        <div>스키</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
+        <div>멋진수영장</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
+        <div>기상천외한 숙소</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
+        <div>개인실</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
+        <div>최고의 전망</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/677a041d-7264-4c45-bb72-52bff21eb6e8.jpg" alt="airplane icon">
+        <div>호숫가</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
+        <div>저택</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
+        <div>국립공원</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>료칸</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
+        <div>스키</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
+        <div>멋진수영장</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
+        <div>기상천외한 숙소</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
+        <div>개인실</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
+        <div>최고의 전망</div>
+      </button>
+    </div>
   </nav>
   <section style="height:auto; margin:10px 0;">
     <main style="position:relative; height:480px; border:2px solid #000; background:gray;">
