--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/클론/html/clone_header001.html
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/클론/html/clone_header001.html
@@ -29,9 +29,10 @@
     </div>
   </header>
 
-  <div class="category-bar">
-    <button class="category-button">
-      <img src="../imgs/airplane.svg" alt="airplane icon">
+  <div id="category-bar">
+    <button class="category-button" id="active-category-button">
+      <img class="inactive-img" src="../imgs/airplane.svg" alt="airplane icon">
+      <img class="active-img" src="../imgs/airplane_black.svg" alt="airplane icon">
       <div>이색 비행</div>
     </button>
     <button class="category-button">
@@ -109,7 +110,64 @@
     <button class="category-button">
       <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
       <div>최고의 전망</div>
+      <button class="category-button">
+        <img src="../imgs/airplane.svg" alt="airplane icon">
+        <div>이색 비행</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>호숫가</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
+        <div>저택</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
+        <div>국립공원</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>료칸</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
+        <div>스키</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
+        <div>멋진수영장</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
+        <div>기상천외한 숙소</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
+        <div>개인실</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
+        <div>최고의 전망</div>
     </button>
   </div>
 </body>
+<script>
+  // document.querySelectorAll
+  // document.getElementsByClassName
+  // 여러가지 셀렉터를 가지고와야하므로
+  document.querySelectorAll('.category-button').forEach(button => {
+    button.addEventListener("click", event =>{
+      // console.log('clidked')
+      document.querySelector("#active-category-button").removeAttribute("id")
+
+      button.setAttribute('id',"active-category-button")
+    })
+  }) //1. 여러가지 각각의 버튼들에 이벤트 리스너를 달거야. eventlistener에 클릭달고 함수를 넣는다
+  //2. 클릭이 발생했을때 이벤트를 인자로 받는 함수인데. user가 클릭하는 부분을 기억하고있다가 콘솔창에 찍어준다.
+  //3. 클릭시에 변하는 active id스타일을 클릭시에 사용할 수 있도록 만들어둔다.
+  //4. 기존 active라고 갖고있는것을 inactive로 만들어야된다.
+  //5. 우리가 방금 누른 버튼(active-catecory-button)을 다시 active 할 수 있게 변경한다.
+
+</script>
 </html>
