--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/html/clone_header001.html
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/html/clone_header001.html
@@ -28,88 +28,49 @@
       </div>
     </div>
   </header>
-
-  <div id="category-bar">
-    <button class="category-button" id="active-category-button">
-      <img class="inactive-img" src="../imgs/airplane.svg" alt="airplane icon">
-      <img class="active-img" src="../imgs/airplane_black.svg" alt="airplane icon">
-      <div>이색 비행</div>
-    </button>
-    <button class="category-button" id="active-category-button">
-      <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
-      <div>호숫가</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
-      <div>저택</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
-      <div>국립공원</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
-      <div>료칸</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
-      <div>스키</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
-      <div>멋진수영장</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
-      <div>기상천외한 숙소</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
-      <div>개인실</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
-      <div>최고의 전망</div>
-    </button>
-    <button class="category-button">
-      <img src="../imgs/airplane.svg" alt="airplane icon">
-      <div>이색 비행</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
-      <div>호숫가</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
-      <div>저택</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
-      <div>국립공원</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
-      <div>료칸</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
-      <div>스키</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
-      <div>멋진수영장</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
-      <div>기상천외한 숙소</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
-      <div>개인실</div>
-    </button>
-    <button class="category-button">
-      <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
-      <div>최고의 전망</div>
+  <nav>
+    <div id="category-bar">
+      <button class="category-button" id="active-category-button"><!-- script로 동적구현 할때는 id를 중복으로 button 에 넣어주면 선택이 되어서 오류가 발생한다. -->
+        <img class="inactive-img" src="../imgs/airplane.svg" alt="airplane icon">
+        <img class="active-img" src="../imgs/airplane_black.svg" alt="airplane icon">
+        <div>이색 비행</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>호숫가</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
+        <div>저택</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
+        <div>국립공원</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>료칸</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
+        <div>스키</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
+        <div>멋진수영장</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
+        <div>기상천외한 숙소</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
+        <div>개인실</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
+        <div>최고의 전망</div>
+      </button>
       <button class="category-button">
         <img src="../imgs/airplane.svg" alt="airplane icon">
         <div>이색 비행</div>
@@ -149,14 +110,198 @@
       <button class="category-button">
         <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
         <div>최고의 전망</div>
-    </button>
-  </div>
-  <div id="grid">
-    <div>A</div>
-    <div>B</div>
-    <div>C</div>
-    <div>D</div>
-  </div>
+      </button>
+      <button class="category-button">
+        <img src="../imgs/airplane.svg" alt="airplane icon">
+        <div>이색 비행</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>호숫가</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/78ba8486-6ba6-4a43-a56d-f556189193da.jpg" alt="airplane icon">
+        <div>저택</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="airplane icon">
+        <div>국립공원</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/827c5623-d182-474a-823c-db3894490896.jpg" alt="airplane icon">
+        <div>료칸</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt="airplane icon">
+        <div>스키</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="airplane icon">
+        <div>멋진수영장</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" alt="airplane icon">
+        <div>기상천외한 숙소</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="airplane icon">
+        <div>개인실</div>
+      </button>
+      <button class="category-button">
+        <img src="../images/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt="airplane icon">
+        <div>최고의 전망</div>
+      </button>
+    </div> 
+  </nav>
+
+  <!-- 격자무늬 배열 숙소리스트 아이템 -->
+  <main>
+    <div id="place-items-wrapper">
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/1000/1000" alt="place image">
+          <!-- <img src="https://picsum.photos/id/1/1000/1000" alt="place image"> lorem picsum은 id를 주면 아이디에 맞는 이미지를 가져오기도 한다.-->
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/203/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/50/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/128/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/5/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/98/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/600/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/23/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/802/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/111/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/3/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+      <div class="place-list-item">
+        <div class="place-image-wrapper">
+          <img src="https://picsum.photos/id/29/1000/1000" alt="place image">
+          <img class="heart-icon" src="../imgs/heart.svg" alt="heart icon">
+        </div>
+        <div class="description-section">
+          <div class="description-section_title">lorem ipsum</div>
+          <div>lorem ipsum 2</div>
+          <div>lorem ipsum 3</div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- //격자무늬 배열 숙소리스트 아이템 -->
+
+  <!-- 플러팅 버튼 -->
+  <button id="floating-map-button">
+    <span>지도 표시하기</span>
+    <img width="16" src="../imgs/map-trifold.svg" alt="map icon">
+  </button>
+    <!-- // 플러팅 버튼 -->
+
+
 </body>
 <script>
   // document.querySelectorAll
