parallx-scrolling commit 231220 2132

--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/html/index_parallx-scrolling.html
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/html/index_parallx-scrolling.html
@@ -8,11 +8,11 @@
     </head>
     <body>
     <header>
-        <a href="" class="button-in-header">THE MOUNTAIN</a>
-        <div id="right-button">
+        <a href="" id="document-title" class="button-in-header">THE MOUNTAIN</a>
+        <div id="right-buttons">
         <a href="" id="active-menu" class="button-in-header">MOUNTAIN</a>
-        <a href="" id="active-menu" class="button-in-header">AMAZING BLOG</a>
-        <a href="" id="active-menu" class="button-in-header">AMAZING NEWS</a>
+        <a href="" class="button-in-header">AMAZING BLOG</a>
+        <a href="" class="button-in-header">AMAZING NEWS</a>
         </div>
         <div id="image-wrapper">
             <?xml version="1.0" encoding="utf-8"?>
